ApplicationEventPublisherAware事件 增加以注解方式进行操作实例

--- a/event-publish-aware-point/pom.xml
+++ b/event-publish-aware-point/pom.xml
@@ -46,6 +46,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--引入事务包-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.2.4.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
